<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forum_username"
            android:text="@string/user_name"
            android:textSize="@dimen/standard_text_size"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forum_time"
            android:text="@string/time_posted"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:layout_marginStart="10dp"
            android:layout_below="@id/forum_username"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forum_postedin"
            android:text="@string/posted_in"
            android:textSize="@dimen/standard_text_size"
            android:textColor="@color/textColor"
            android:layout_below="@id/forum_time"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forum_see_more"
            android:text="See more"
            android:textSize="@dimen/standard_text_size"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forum_question_text"
            android:text="@string/dummy_question"
            android:textSize="@dimen/standard_text_size"
            android:textColor="@color/textColor"
            android:layout_above="@id/forum_see_more"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>